--- a/blog-react/index.html
+++ b/blog-react/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>blog-react</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/components/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./public/logo-PixShield.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Blog com React</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/components/main.tsx"></script>
+</body>
+
 </html>
